--- a/src/case.html
+++ b/src/case.html
@@ -15,6 +15,7 @@
 
       <div class="btn">button</div>
       <div class="btn-green">btn-green</div>
+      <div class="w-20 h-20 btn-primary">primary</div>
     </div>
   </body>
 </html>
